--- a/website-projects/clipboard/src/assets/input.css
+++ b/website-projects/clipboard/src/assets/input.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-    --font-sans-custom: 'Bai Jamjuree', sans-serif;
-
+    --font-sans: 'Bai Jamjuree', sans-serif;
 }
 
 @layer utilities {
